infra/k8s/overlays/mtls-linkerd/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinela
  annotations:
    linkerd.io/inject: enabled
