infra/k8s/overlays/mtls-linkerd/policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sentinela-api-mesh-only
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sentinela-api
  requiredAuthenticationRefs:
    - name: sentinela-mesh-only
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sentinela-kafka-mesh-only
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sentinela-kafka
  requiredAuthenticationRefs:
    - name: sentinela-mesh-only
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
